[package]
name = "hcp"
version = "0.3.0"
description = "Utility for running and subprocess and pinging healthchecks.io with result"
license = "MIT"
documentation = "https://github.com/drewkett/hcp"
homepage = "https://github.com/drewkett/hcp"
repository = "https://github.com/drewkett/hcp"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1"
clap = { version = "4", features = ["derive", "env"] }
ureq = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
